@@ -38,6 +38,9 @@ CVS code -
 	  pointing to a different memory block, there will be a segfault
 	  when the value of def is copied into it via strcpy(). (bort,
 	  Christian Weisgarber, David Benbennick, and DLR)
+	- Remove the last editbot references, to avoid any potential
+	  segfaults related to them.  Also remove fix_editbot(), as it's
+	  no longer needed. (David Benbennick)
 - files.c:
   do_insertfile()
 	- Wrap one reference to NANO_EXTCMD_KEY in a NANO_SMALL #ifdef.
